# term-display

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  premake5.lua  statics.txt
example/: CMakeLists.txt  cube.c  example_utils.c  example_utils.h  image_display.c  kbinput.c  mouse,c  mouse.c  multiline_text.c  noise.c  rgb_scrolling.c
include/: td_black_magic.h  td_def.h  td_err.h  td_font.h  td_input.h  td_main.h  td_math.h  td_renderer.h  td_texture.h  term_def.h  term_display.h  term_event.h  term_font.h  term_math.h  term_texture.h  term_texture.h.save
src/: td_black_magic.h  td_debug.c  td_debug.h  td_dynarr.c  td_dynarr.h  td_font.c  td_input.c  td_input.h  td_main.c  td_priv.c  td_priv.h  td_priv_unix.c  td_priv_win32.c  td_rasterizer.c  td_rasterizer.h  td_renderer.c  td_texture.c  term_display.c  term_font.c  term_piv_unix.c  term_priv.c  term_priv.h  term_priv_linux.c  term_priv_unix.c  term_priv_win32.c  term_texture.c  term_texture_priv.c  term_texture_priv.h
tests/: CMakeLists.txt  image_display.c  kbinput.c  kstrokseq.c  multiline-text.c  multiline_text.c  noise.c  rgb-scrolling.c  rgb_scrolling.c  test_utils.c  test_utils.h
tools/: fps-visualizer.py
